# python-flask-server/swagger_server/models/project.py
@@ -20,11 +20,19 @@ class Project(Model, Base):
     _project_id = Column(Integer, primary_key=True)
     _project_name = Column(String(255), nullable=True)
 
-    _account_id = Column(Integer, ForeignKey('account._account_id'))
     _account_id_team_leader = Column(Integer, ForeignKey('account._account_id'))
     _account_id_secretary = Column(Integer, ForeignKey('account._account_id'))
 
-    def __init__(self, project_id: int=None, project_name: str=None, project_owner_id: int=None, secretary_id: int=None):
+    #_team_leader = relationship("Account", backref="" back_populates="_project_team_leader", foreign_keys=[_account_id_team_leader])
+    #_team_leader = relationship("Account", back_populates="_project_secretary", foreign_keys=[_account_id_secretary])
+    _team_leader = relationship("Account", uselist=False, foreign_keys=[_account_id_team_leader])
+    _team_leader = relationship("Account", uselist=False, foreign_keys=[_account_id_secretary])
+    #_team_leader = relationship("Account", uselist=False, foreign_keys=[_account_id_team_leader])
+    #_secretary = relationship("Account", uselist=False, foreign_keys=[_account_id_secretary])
+
+    _accounts = relationship("Account", secondary="project_user", backref="_projects")
+
+    def __init__(self, project_id: int=None, project_name: str=None, account_id_team_leader: int=None, account_id_secretary: int=None):
         """
         Project - a model defined in Swagger
 
@@ -32,29 +40,29 @@ class Project(Model, Base):
         :type project_id: int
         :param project_name: The project_name of this Project.
         :type project_name: str
-        :param project_owner_id: The project_owner_id of this Project.
-        :type project_owner_id: int
-        :param secretary_id: The secretary_id of this Project.
-        :type secretary_id: int
+        :param account_id_team_leader: The account_id_team_leader of this Project.
+        :type account_id_team_leader: int
+        :param account_id_secretary: The account_id_secretary of this Project.
+        :type account_id_secretary: int
         """
         self.swagger_types = {
             'project_id': int,
             'project_name': str,
-            'project_owner_id': int,
-            'secretary_id': int
+            'account_id_team_leader': int,
+            'account_id_secretary': int
         }
 
         self.attribute_map = {
             'project_id': 'project_id',
             'project_name': 'project_name',
-            'project_owner_id': 'project_owner_id',
-            'secretary_id': 'secretary_id'
+            'account_id_team_leader': 'account_id_team_leader',
+            'account_id_secretary': 'account_id_secretary'
         }
 
         self._project_id = project_id
         self._project_name = project_name
-        self._account_id_team_leader = project_owner_id
-        self._account_id_secretary = secretary_id
+        self._account_id_team_leader = account_id_team_leader
+        self._account_id_secretary = account_id_secretary
 
     @classmethod
     def from_dict(cls, dikt) -> 'Project':
@@ -115,48 +123,56 @@ class Project(Model, Base):
         self._project_name = project_name
 
     @property
-    def project_owner_id(self) -> int:
+    def account_id_team_leader(self) -> int:
         """
-        Gets the project_owner_id of this Project.
-        Project owner id
+        Gets the account_id_team_leader of this Project.
+        Project team leader id
 
-        :return: The project_owner_id of this Project.
+        :return: The account_id_team_leader of this Project.
         :rtype: int
         """
         return self._account_id_team_leader
 
-    @_account_id_team_leader.setter
-    def project_owner_id(self, project_owner_id: int):
+    @account_id_team_leader.setter
+    def account_id_team_leader(self, account_id_team_leader: int):
         """
-        Sets the project_owner_id of this Project.
-        Project owner id
+        Sets the account_id_team_leader of this Project.
+        Project team leader id
 
-        :param project_owner_id: The project_owner_id of this Project.
-        :type project_owner_id: int
+        :param account_id_team_leader: The account_id_team_leader of this Project.
+        :type account_id_team_leader: int
         """
 
-        self._account_id_team_leader = project_owner_id
+        self._account_id_team_leader = account_id_team_leader
 
     @property
-    def secretary_id(self) -> int:
+    def account_id_secretary(self) -> int:
         """
-        Gets the secretary_id of this Project.
+        Gets the account_id_secretary of this Project.
         Project secretary id
 
-        :return: The secretary_id of this Project.
+        :return: The account_id_secretary of this Project.
         :rtype: int
         """
         return self._account_id_secretary
 
-    @_account_id_secretary.setter
-    def secretary_id(self, secretary_id: int):
+    @account_id_secretary.setter
+    def account_id_secretary(self, account_id_secretary: int):
         """
-        Sets the secretary_id of this Project.
+        Sets the account_id_secretary of this Project.
         Project secretary id
 
-        :param secretary_id: The secretary_id of this Project.
-        :type secretary_id: int
+        :param account_id_secretary: The account_id_secretary of this Project.
+        :type account_id_secretary: int
         """
 
-        self._account_id_secretary = secretary_id
+        self._account_id_secretary = account_id_secretary
+
+    @property
+    def accounts(self):
+        return self._accounts
+
+    @accounts.setter
+    def accounts(self, accounts):
+        self._accounts = accounts
 
